--- a/index.html
+++ b/index.html
@@ -13,21 +13,15 @@
         <title>Каталоги ДЗЗ - Поиск Данных Дистанционного Зондирования Земли из Космоса по каталогам:
         Geoeye, Ikonos, QuickBird, Worldview-1, WorldView-2, Eros-A, Eros-B</title>        
 
-        <!-- common -->        
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" charset="utf-8"> -->
-        <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" /> -->
-        
-        <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.2/es6-promise.auto.js" charset="utf-8"></script> -->
-
         <!-- geomixer -->
         <link rel="stylesheet" href="http://www.kosmosnimki.ru/lib/geomixer_1.3/geomixer.css" charset="utf-8" />
         <script type="text/javascript" src="http://www.kosmosnimki.ru/lib/geomixer_1.3/geomixer-src.js" charset="utf-8"></script>
 
         <!-- moment.js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment-with-locales.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment-with-locales.min.js"></script>
         
         <!-- main -->
-        <link rel="stylesheet" href="dist/scanex-edda.min.css" charset="utf-8">
+        <link rel="stylesheet" href="dist/bundle.min.css" charset="utf-8">
     </head>
     <body>
         <div id="header">            
@@ -49,7 +43,7 @@
             </div> 
         </div>
         <div id="map"></div>
-        <script type="text/javascript" src="dist/scanex-edda.6719e036c5eaf2f960aa1c4f68d6f9a6d5add917.min.js" charset="utf-8" ></script>
+        <script type="text/javascript" src="dist/bundle.js" charset="utf-8" ></script>
         <!-- Yandex.Metrika counter -->
         <!-- <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45569484 = new Ya.Metrika({ id:45569484, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/45569484?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
         <!-- /Yandex.Metrika counter -->
