Some components were added

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <div id="progress-icon"></div>
             <div id="user-panel">
                 <div id="lang"></div>
-                <div id="help">
-                    <div class="help-button"></div>    
-                </div>            
+                <div id="help"></div>            
                 <div id="auth"></div>
             </div> 
         </div>
